# upm-portal

./: .env.example  .gitattributes  .gitignore  ITOSS_UPM_Phase2_Specification.md  README.md  itoss-upm-ultraplan-prompt-v2.md  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: pyproject.toml
apps/backend/tests/: test_api_phase2.py  test_api_smoke.py
apps/backend/upm_backend/: __init__.py  audit.py  cache.py  cli.py  config.py  db.py  deps.py  freshness.py  jobmap.py  jobrunner.py  loadconsumer.py  main.py  realdata.py  runtime.py  security.py  seed.py  services.py
apps/backend/upm_backend/routers/: admin.py  ai.py  auth.py  catalog.py  connections.py  dashboards.py  duckdb_query.py  health.py  ingest.py  jobs.py  projects.py  query.py
apps/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx  theme.ts
apps/frontend/src/api/: client.ts  types.ts
apps/frontend/src/auth/: AuthContext.tsx
apps/frontend/src/components/: FreshnessBadge.tsx  Layout.tsx  WidgetRenderer.tsx
apps/frontend/src/components/ingest/: ConnectionIngest.tsx  CsvIngest.tsx  SqlIngest.tsx
apps/frontend/src/pages/: CatalogPage.tsx  ConnectionsPage.tsx  DashboardBuilderPage.tsx  DashboardViewPage.tsx  DashboardsPage.tsx  IngestWizardPage.tsx  JobBuilderPage.tsx  JobsPage.tsx  LoginPage.tsx
apps/ingestion/: pyproject.toml
apps/ingestion/tests/: test_inference.py
apps/ingestion/upm_ingestion/: __init__.py  celery_app.py  cli.py  config.py  inference.py  orchestrator.py  tasks.py
apps/ingestion/upm_ingestion/sources/: __init__.py  base.py  connection_source.py  csv_source.py  factory.py  oracle.py  synthetic.py  util.py
apps/scheduler/: pyproject.toml
apps/scheduler/upm_scheduler/: __init__.py  celery_app.py  cli.py  schedules.py  sync.py
control-plane/: alembic.ini  pyproject.toml
control-plane/alembic/: env.py
control-plane/alembic/versions/: 0001_initial.py  0002_connections_uploads.py
control-plane/tests/: test_crypto_and_url.py
control-plane/upm_control_plane/: __init__.py  base.py  bootstrap.py  crypto.py  mapping.py  models.py
docs/: architecture-plan.md  how-it-all-works.md  runbook-recovery.md
docs/adr/: 001-columnar-store-duckdb.md  002-single-writer-gateway.md  003-two-stores.md  004-scheduler-celery-redbeat.md  005-ingestion-parquet-landing.md  006-durability-parquet-replay.md  007-load-modes-retention.md  008-rbac-capabilities.md  009-frontend-react-mui.md  010-maps-maplibre-kepler.md  011-ai-openai-compatible-select-only.md  README.md
infra/compose/: Dockerfile.backend  docker-compose.dev.yml
infra/observability/: prometheus.yml
