[project]
name = "upm-control-plane"
version = "0.1.0"
description = "Postgres control plane: SQLAlchemy models, session, Alembic migrations."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "cryptography>=43",
    "upm-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["upm_control_plane"]

[tool.uv.sources]
upm-shared = { workspace = true }
