[project]
name = "upm-backend"
version = "0.1.0"
description = "UPM backend API (FastAPI): auth, RBAC, catalog, query, jobs, dashboards, AI proxy."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "redis>=5.0",
    "celery>=5.4",
    "httpx>=0.27",
    "email-validator>=2.2",
    "upm-shared",
    "upm-sql-tools",
    "upm-dataplane",
    "upm-control-plane",
    "upm-ingestion",
]

[project.scripts]
upm = "upm_backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["upm_backend"]

[tool.uv.sources]
upm-shared = { workspace = true }
upm-sql-tools = { workspace = true }
upm-dataplane = { workspace = true }
upm-control-plane = { workspace = true }
upm-ingestion = { workspace = true }
