[project]
name = "upm-ingestion"
version = "0.1.0"
description = "Ingestion workers: source (Oracle/synthetic) -> Parquet landing -> load command."
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "redis>=5.0",
    "duckdb>=1.1",
    "oracledb>=2.4",
    "upm-shared",
    "upm-sql-tools",
    "upm-dataplane",
    "upm-control-plane",
]

[project.scripts]
upm-ingest = "upm_ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["upm_ingestion"]

[tool.uv.sources]
upm-shared = { workspace = true }
upm-sql-tools = { workspace = true }
upm-dataplane = { workspace = true }
upm-control-plane = { workspace = true }
